--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
     <head>
         <title>Yfor skills development platform</title>
-        <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <link rel="stylesheet" href="base.css">
-        <link rel="stylesheet" href="style.css">
+        
+        <link rel="stylesheet" href="base.css" media="all">
+        <link rel="stylesheet" href="style.css" media="all">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     </head>
 
 <body>
